test/fail/entity-constraint-module.app
//Property 'name' of entity 'XYZ' is defined multiple times
application test

imports module/entity-constraint-in-module

 define page root() {
    "default body"
  }
